# applied-ml

./: README.md
HW1/: EEC189_HW1.ipynb  README.md  main.py  pyproject.toml
HW1/tests/: test_linear_regression.py
HW1/utils/: correlation.py  datasets.py  gradient_descent.py  mse.py  regression.py  shuffle.py
HW2/: README.md  decision_trees.ipynb  logistic_regression.ipynb  pyproject.toml  regularization.ipynb
HW3/: hierarchical_clustering.ipynb  k_means_clustering.ipynb  k_nearest_neighbors.ipynb  multi_layer_perceptron.ipynb  naive_bayes.ipynb  pca_demo.py  pyproject.toml  support_vector_machines.ipynb
HW3/utils/: pca.py
