[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["Alejandro Armas <dlmhsarmasalejandro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
scipy = "^1.10.1"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
torch = "^2.0.1"
pytorch-lightning = "^2.0.2"
skorch = "^0.13.0"
torchmetrics = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
